--- a/src/components/App.css
+++ b/src/components/App.css
@@ -28,11 +28,43 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.flex {
+  display: flex;
+  justify-content: center;
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+}
+
+#user-dashboard-wrapper {
+  margin: 0px 100px;
+  gap: 40px;
+}
+
+#user-group-container {
+  flex-direction: column;
+  background-color: gray;
+  width: 100%;
+}
+
+#group-cards {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  margin: 0px 20px 40px 20px;
+}
+
+.group-card {
+  height: 250px;
+  background-color: white;
+  width: 250px;
+}
+
+#activity-feed {
+  display: flex;
+  height: 100%;
+  width: 30%;
+  background-color: #282c34;
 }
